# spottmee-face-embeddings

./: main.py  pyproject.toml
src/app/: lol.py  main.py
